--- a/src/sass/components/_cards.scss
+++ b/src/sass/components/_cards.scss
@@ -26,8 +26,8 @@
       background-color: $clr-accent;
       text-align: center;
       border-radius: 30px;
-      padding: 8px 20px;
-      margin-left: -3px;
+      padding: 8px 15px;
+      // margin-left: -22px;
       z-index: 2;
     }
 
